--- a/Source/AlephNote.App/AlephNote.App.csproj
+++ b/Source/AlephNote.App/AlephNote.App.csproj
@@ -207,7 +207,7 @@
     <Compile Include="WPF\Windows\AboutWindow.xaml.cs">
       <DependentUpon>AboutWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="WPF\Windows\DebugTextWindow.xaml.cs">
+    <Compile Include="WPF\Dialogs\DebugTextWindow.xaml.cs">
       <DependentUpon>DebugTextWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="WPF\Windows\FirstStartupWindow.xaml.cs">
@@ -231,16 +231,16 @@
     <Compile Include="WPF\Windows\SettingsWindow.xaml.cs">
       <DependentUpon>SettingsWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="WPF\Windows\ExceptionWindow.xaml.cs">
+    <Compile Include="WPF\Dialogs\ExceptionWindow.xaml.cs">
       <DependentUpon>ExceptionWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="WPF\Windows\SyncErrorDialog.xaml.cs">
+    <Compile Include="WPF\Dialogs\SyncErrorDialog.xaml.cs">
       <DependentUpon>SyncErrorDialog.xaml</DependentUpon>
     </Compile>
-    <Compile Include="WPF\Windows\UpdateWindowViewmodel.cs">
+    <Compile Include="WPF\Dialogs\UpdateWindowViewmodel.cs">
       <DependentUpon>UpdateWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="WPF\Windows\UpdateWindow.xaml.cs">
+    <Compile Include="WPF\Dialogs\UpdateWindow.xaml.cs">
       <DependentUpon>UpdateWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="WPF\WpfScreen.cs" />
@@ -280,7 +280,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="WPF\Windows\DebugTextWindow.xaml">
+    <Page Include="WPF\Dialogs\DebugTextWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -308,15 +308,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="WPF\Windows\ExceptionWindow.xaml">
+    <Page Include="WPF\Dialogs\ExceptionWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="WPF\Windows\SyncErrorDialog.xaml">
+    <Page Include="WPF\Dialogs\SyncErrorDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="WPF\Windows\UpdateWindow.xaml">
+    <Page Include="WPF\Dialogs\UpdateWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
