Support "IsPinned" for StandardNotes, SimpleNotes & HeadlessNotes
--> references #24

--- a/Source/AlephNote.App/AlephNote.App.csproj
+++ b/Source/AlephNote.App/AlephNote.App.csproj
@@ -391,6 +391,9 @@
     <Resource Include="Resources\folder_all.png" />
     <Resource Include="Resources\folder_any.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\star.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
