--- a/Source/Plugins/EvernotePlugin/EvernotePlugin.csproj
+++ b/Source/Plugins/EvernotePlugin/EvernotePlugin.csproj
@@ -7,7 +7,8 @@
     <PackageId>EvernotePlugin</PackageId>
     
     <AssemblyVersion>0.0.0.8</AssemblyVersion>
-    <FileVersion>0.0.0.8</FileVersion>
+		<FileVersion>0.0.0.8</FileVersion>
+		<Version>0.0.0.8</Version>
 
     <DefineConstants>NETFX_CORE</DefineConstants>
 
