--- a/Source/AlephNote.App/AlephNote.App.csproj
+++ b/Source/AlephNote.App/AlephNote.App.csproj
@@ -130,8 +130,14 @@
     <Compile Include="WPF\Converter\SnippetsToSnippetSource.cs" />
     <Compile Include="WPF\Converter\TagsToPlaceholder.cs" />
     <Compile Include="WPF\Converter\TagToBorderBrush.cs" />
-    <Compile Include="WPF\Dialogs\FolderNameDialog.xaml.cs">
-      <DependentUpon>FolderNameDialog.xaml</DependentUpon>
+    <Compile Include="WPF\Dialogs\GenericInputDialog.xaml.cs">
+      <DependentUpon>GenericInputDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WPF\Windows\ThemeEditor.xaml.cs">
+      <DependentUpon>ThemeEditor.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WPF\Windows\ThemeEditorViewmodel.cs">
+      <DependentUpon>ThemeEditor.xaml</DependentUpon>
     </Compile>
     <Compile Include="WPF\Extensions\AlephThemeExtension.cs" />
     <Compile Include="WPF\Extensions\ThemeBindingExtension.cs" />
@@ -283,7 +289,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="WPF\Dialogs\FolderNameDialog.xaml">
+    <Page Include="WPF\Dialogs\GenericInputDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WPF\Windows\ThemeEditor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
