Monokai Neo theme (WIP)
--> references #20

--- a/Source/AlephNote.App/AlephNote.App.csproj
+++ b/Source/AlephNote.App/AlephNote.App.csproj
@@ -436,8 +436,12 @@
       <TargetPath>Themes\default.xml</TargetPath>
       <SubType>Designer</SubType>
     </ContentWithTargetPath>
+		<ContentWithTargetPath Include="Resources\themes\monokai-neo.xml" >
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<TargetPath>Themes\monokai-neo.xml</TargetPath>
+			<SubType>Designer</SubType>
+		</ContentWithTargetPath>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
