--- a/Source/AlephNote.Common/AlephNote.Common.csproj
+++ b/Source/AlephNote.Common/AlephNote.Common.csproj
@@ -23,6 +23,7 @@
 	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
 		<PackageReference Include="System.Diagnostics.FileVersionInfo" Version="4.3.0" />
+		<PackageReference Include="System.IO.FileSystem.Watcher" Version="4.3.0" />
 		<PackageReference Include="System.Net.Http" Version="4.3.3" />
 		<PackageReference Include="System.Threading.Thread" Version="4.3.0" />
 		<PackageReference Include="System.Xml.XDocument" Version="4.3.0" />
