--- a/Source/AlephNote.Common/AlephNote.Common.csproj
+++ b/Source/AlephNote.Common/AlephNote.Common.csproj
@@ -25,6 +25,8 @@
 		<PackageReference Include="System.Diagnostics.FileVersionInfo" Version="4.3.0" />
 		<PackageReference Include="System.IO.FileSystem.Watcher" Version="4.3.0" />
 		<PackageReference Include="System.Net.Http" Version="4.3.3" />
+		<PackageReference Include="System.Reflection.TypeExtensions" Version="4.4.0" />
+		<PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
 		<PackageReference Include="System.Threading.Thread" Version="4.3.0" />
 		<PackageReference Include="System.Xml.XDocument" Version="4.3.0" />
 	</ItemGroup>
