--- a/Source/AlephNote.PluginInterface/AlephNote.PluginInterface.csproj
+++ b/Source/AlephNote.PluginInterface/AlephNote.PluginInterface.csproj
@@ -2,6 +2,10 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>net46;netstandard1.6</TargetFrameworks>
+
+		<AssemblyVersion>0.0.0.0</AssemblyVersion>
+		<FileVersion>0.0.0.0</FileVersion>
+		<Version>0.0.0.0</Version>
 		
 		<AssemblyName>AlephNote.PluginInterface</AssemblyName>
 		<PackageId>AlephNote.PluginInterface</PackageId>
