--- a/Source/Plugins/EvernotePlugin/EvernotePlugin.csproj
+++ b/Source/Plugins/EvernotePlugin/EvernotePlugin.csproj
@@ -5,7 +5,7 @@
 
 		<AssemblyName>EvernotePlugin</AssemblyName>
 		<PackageId>EvernotePlugin</PackageId>
-		
+
 		<AssemblyVersion>0.0.0.11</AssemblyVersion>
 		<FileVersion>0.0.0.11</FileVersion>
 		<Version>0.0.0.11</Version>
@@ -18,15 +18,29 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\AlephNote.PluginInterface\AlephNote.PluginInterface.csproj"><Private>false</Private></ProjectReference>
-	</ItemGroup>
+		<ProjectReference Include="..\..\AlephNote.PluginInterface\AlephNote.PluginInterface.csproj">
+			<ExcludeAssets>runtime</ExcludeAssets>
+		</ProjectReference>
 
-	<ItemGroup>
-		<PackageReference Include="System.Net.Requests" Version="4.3.0" />
-		<PackageReference Include="System.Reflection.TypeExtensions" Version="4.4.0" />
-		<PackageReference Include="System.Threading.Thread" Version="4.3.0" />
-		<PackageReference Include="System.Threading.ThreadPool" Version="4.3.0" />
-		<PackageReference Include="System.Xml.XDocument" Version="4.3.0" />
+		<PackageReference Include="System.Net.Requests" Version="4.3.0">
+			<ExcludeAssets>runtime</ExcludeAssets>
+		</PackageReference>
+
+		<PackageReference Include="System.Reflection.TypeExtensions" Version="4.4.0">
+			<ExcludeAssets>runtime</ExcludeAssets>
+		</PackageReference>
+
+		<PackageReference Include="System.Threading.Thread" Version="4.3.0">
+			<ExcludeAssets>runtime</ExcludeAssets>
+		</PackageReference>
+
+		<PackageReference Include="System.Threading.ThreadPool" Version="4.3.0">
+			<ExcludeAssets>runtime</ExcludeAssets>
+		</PackageReference>
+
+		<PackageReference Include="System.Xml.XDocument" Version="4.3.0">
+			<ExcludeAssets>runtime</ExcludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
